@@ -3,6 +3,7 @@
 %  This Software and all associated files are released unter the 
 %  GNU General Public License (GPL), see LICENSE for details.
 
-function disabled = get_disabled(self)
+function [disabled, reason] = get_disabled(self)
 
 disabled = self.disabled;
+reason = self.disabled_reason;
