@@ -6,6 +6,10 @@
 mlUnit 1.8.1 (in development)
 -----------------------------
 
+  - You may statically disable tests by calling the disable_tests method
+    on the result of load_tests_from_mfile. This supersedes the disable
+    arguments to load_tests_from_mfile introduces in mlUnit 1.8.0.
+
   - Fix: Call MATLAB on paths containing spaces.
   - Fix: Handle suite_tear_down errors properly.
   - Fix: Restore Ant XML files to UTF-8 format, which was mangled before.
